# premaidai_controller

./: CMakeLists.txt  README.md  package.xml  premaidai_ros_bridge.rosinstall  setup.py
config/: controllers.yaml  joint_config.yaml
include/premaidai_controller/: command.hh  common.hh  robot.hh  ros_bridge.hh  serial_port.hh
include/premaidai_ros_bridge/: command.hh  common.hh  robot.hh  ros_bridge.hh  serial_port.hh
launch/: display.launch  display.rviz  ros_control.launch  rviz_control.launch
scripts/: bridge_node.py
src/: command.cc  robot.cc  ros_bridge.cc  ros_bridge_node.cc  ros_hw_interface_node.cc  serial_port.cc
src/premaidai_controller/: client.py  client_rev2.py
src/premaidai_ros_bridge/: client.py
srv/: MotionRequest.srv
