<?xml version="1.0"?>
<package format="2">
  <name>premaidai_ros_bridge</name>
  <version>0.0.0</version>
  <description>The premaidai_bridge package</description>

  <maintainer email="chikuta@todo.todo">chikuta</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pyserial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
