<?xml version="1.0"?>
<package format="2">
  <name>premaidai_controller</name>
  <version>0.0.0</version>
  <description>The premaidai_bridge package</description>

  <maintainer email="chikuta@todo.todo">chikuta</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>pyserial</exec_depend>
  <export>
  </export>
</package>
